--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "2.1"
+version: "3.1"
 
 services:
   db:
@@ -12,9 +12,8 @@ services:
       - MYSQL_PASSWORD=nextcloud
       - MYSQL_DATABASE=nextcloud
       - MYSQL_USER=nextcloud
-
   app:
-    image: nextcloud
+    image: nextcloud:stable
     restart: always
     links:
       - db
